tests/grammar/schema/init/init_dict_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:7:9
  |
7 |         "gender": "female"
  |         ^ Cannot add member 'gender' to schema 'Name'
  |